name:                language-rust
version:             0.1.0.0
synopsis:            A Rust lexer and parser
description:         Please see README.md
homepage:            https://github.com/ibabushkin/language-rust#readme
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           Copyright: (c) 2016 Inokentiy Babushkin
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Rust
                     , Language.Rust.Lexer
                     , Language.Rust.Token
  build-depends:       array >= 0.5
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , text >= 1.2
  default-language:    Haskell2010

test-suite language-rust-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-rust
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibabushkin/language-rust
